mise en place structure page nouvelle vente

--- a/WebContent/WEB-INF/fragments/navbar.jspf
+++ b/WebContent/WEB-INF/fragments/navbar.jspf
@@ -10,7 +10,7 @@
           <a class="nav-link active" aria-current="page" href="<%=request.getContextPath()%>/encheres">Encheres</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Vendre un article</a>
+          <a class="nav-link" href="<%=request.getContextPath()%>/nouvelle-vente">Vendre un article</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="<%=request.getContextPath()%>/profil?pseudo=<%=request.getSession().getAttribute("pseudo")%>">Mon profil</a>
