--- a/WebContent/WEB-INF/fragments/navbar.jspf
+++ b/WebContent/WEB-INF/fragments/navbar.jspf
@@ -1,39 +1,33 @@
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
-<% 
- 	String isConnecte = (String)request.getSession().getAttribute("pseudo"); 
-	String path = request.getContextPath();
-	String uri = request.getServletPath().toLowerCase();
-	String pseudo = (String)request.getSession().getAttribute("pseudo");
+<%
+String isConnecte = (String) request.getSession().getAttribute("pseudo");
+String path = request.getContextPath();
+String uri = request.getServletPath().toLowerCase();
+String pseudo = (String) request.getSession().getAttribute("pseudo");
 %>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-
-  <a class="navbar-brand" href="<%=path%>">DUH - Encheres</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
-  </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav col-md-right ml-auto">
-      <c:choose>
-      <c:when test="<%=isConnecte != null && !isConnecte.isEmpty()%>">
-        <li class="nav-item">
-          <a class="nav-link <%=(uri.contains("accueil"))? "active" : "" %>" aria-current="page" href="<%=path%>/encheres">Encheres</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link <%=(uri.contains("vendre"))? "active" : "" %>" href="<%=path%>/nouvelle-vente">Vendre un article</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link <%=(uri.contains("profil"))? "active" : "" %>" href="<%=path%>/profil?pseudo=<%=pseudo%>">Mon profil</a>
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-outline-light" href="<%=path%>/deconnexion">Déconnexion</a>
-        </li>
-      </c:when>
-      <c:otherwise>
-        <li class="nav-item">
-          <a class="nav-link active" href="<%=path%>/connexion">S'inscrire - Se connecter</a>
-        </li>
-      </c:otherwise>
-      </c:choose>
-      </ul>
-    </div>
+	<a class="navbar-brand" href="<%=path%>">DUH - Encheres</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarNav">
+		<ul class="navbar-nav col-md-right ml-auto">
+			<c:choose>
+				<c:when test="${utilisateur != null && utilisateur.pseudo != null}">
+					<li class="nav-item"><a class="nav-link <%=(uri.contains("accueil")) ? "active" : ""%>" aria-current="page" href="<%=path%>/encheres">Encheres</a></li>
+					<li class="nav-item"><a class="nav-link <%=(uri.contains("vendre")) ? "active" : ""%>" href="<%=path%>/nouvelle-vente">Vendre un article</a></li>
+					<li class="nav-item"><a class="nav-link <%=(uri.contains("profil")) ? "active" : ""%>" href="<%=path%>/profil?pseudo=<%=pseudo%>">Mon profil</a></li>
+					<c:choose>
+						<c:when test="${utilisateur.administrateur}">
+							<li class="nav-item"><a class="nav-link <%=(uri.contains("admin")) ? "active" : ""%>" href="<%=path%>/administration">Administration</a></li>
+						</c:when>
+					</c:choose>
+					<li class="nav-item"><a class="btn btn-outline-light" href="<%=path%>/deconnexion">Déconnexion</a></li>
+				</c:when>
+				<c:otherwise>
+					<li class="nav-item"><a class="nav-link active" href="<%=path%>/connexion">S'inscrire - Se connecter</a></li>
+				</c:otherwise>
+			</c:choose>
+		</ul>
+	</div>
 </nav>
